# shakers-ai-case-study

./: .env  .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/cli/: refresh_vectors.py
app/data/kb/: contracts.md  onboarding.md  payments.md
app/data/profiles/: profiles.json  sample.json
app/data/qna/: example.json
app/db/: models.py  repo.py
app/eval/: harness.py
app/routers/: metrics.py  metrics_dashboard.py  query.py  recommend.py
app/services/: eval.py  generation.py  indexer.py  profiles.py  rag.py  recommend.py  recommender.py  retrieval.py
app/templates/: index.html  metrics.html
app/utils/: answer_post.py  answer_style.py  caching.py  chunking.py  citations.py  compressor.py  embeddings.py  logging.py  metadata.py  metrics.py  oos.py  prompting.py  prompts.py  ratelimit.py  rcache.py  recommend_core.py  reranker.py  retrieval.py  sanitize.py  slog.py  timing.py
scripts/: faq_json_to_md.py  index_kb.py  streamlit_app.py
store/chroma/: chroma.sqlite3
tests/: test_answer_style.py  test_cache.py  test_citations.py  test_compressor.py  test_generation_contract.py  test_generation_prompt.py  test_generation_timeouts.py  test_integration_end_to_end.py  test_logging.py  test_metrics.py  test_metrics_basic.py  test_oos_config.py  test_oos_integration.py  test_prompt_injection_shield.py  test_prompting_build.py  test_query_validation.py  test_rag_integration.py  test_rate_limit.py  test_recommend_endpoint.py  test_reranker.py  test_retrieval_basic.py  test_sanitize.py  test_streaming.py
tests/data/: eval_cases.yaml
(+316 files in other folders)
